// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailWidget renders a inline widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 creiFH"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 fmJfdj"
      >
        <span
          class="StyledText-sc-1sadyjn-0 eTVfRR sc-fZOVwu WyDqd"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 jpkMKD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 fGZfQq"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailWidget renders a simple widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 creiFH"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 euFILx"
      >
        <span
          class="StyledText-sc-1sadyjn-0 eTVfRR sc-fZOVwu WyDqd"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 jpkMKD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 fGZfQq"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;
